removed POST and use PUT instead to create, improved docs
